Gives more memory to travis to run tests